Fixed up the heart clipping on the home page use of `two-column`.

--- a/FrontEnd/styles/layout.scss
+++ b/FrontEnd/styles/layout.scss
@@ -27,14 +27,11 @@ main > .inner {
 
 .two-column {
     display: grid;
-    overflow: hidden;
     grid-template-columns: minmax(0, 3fr) minmax(0, 1fr);
     gap: 60px;
-    min-width: 0;
 
     > :last-child {
         justify-self: end;
-        min-width: 0;
     }
 
     &.even {
